--- a/config.mkd
+++ b/config.mkd
@@ -35,8 +35,4 @@ Zones are listed in the additional section of the reply packet
     USER. TXT   "DROPPOWER miekg list"
 
 
-The config is internally stored in some memory structure.
-
-
-    .FKS
-    ZONE.FKS.        USER.FKS.
+The config is internally stored in a memory structure (not a Zone).
